[tool.poetry]
name = "mfclib"
version = "0.1.1"
description = "A small Python module to calculate flow rates for gas mixtures."
authors = ["Thomas Haeber <thomas.haeber@kit.edu>"]
readme = "README.md"

[tool.poetry.scripts]
mfc = 'mfclib.cli:safe_cli'

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
click = "^8.1.4"
numpy = "^1.25.1"
scipy = "^1.11.1"
pint = "^0.22"
rich = "^13.4.2"
pydantic = "^2.1.1"
ruamel-yaml = "^0.17.32"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.4"
jupyter = "^1.0.0"
black = "^23.7.0"
toolz = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 80

# [tool.pytest.ini_options]
# filterwarnings = ["error"]
