[tool.poetry]
name = "mfclib"
version = "0.2.2"
description = "A small Python module to calculate flow rates for gas mixtures."
authors = ["Thomas Haeber <thomas.haeber@kit.edu>"]
readme = "README.md"
packages = [
    { include = "mfclib", from = "src" },
]

[tool.poetry.scripts]
mfc = 'mfclib.cli:safe_cli'

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
click = "^8.1.4"
numpy = "^1.25.1"
scipy = "^1.11.1"
pint = "^0.22"
rich = "^13.4.2"
pydantic = "^2.1.1"
ruamel-yaml = "^0.17.32"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.4"
jupyter = "^1.0.0"
black = "^23.7.0"
toolz = "^0.12.0"
pandas-stubs = "^2.2.2.240514"
pytest-watcher = "^0.4.2"
git-changelog = "^2.5.2"
pre-commit = "^3.7.1"
bump-my-version = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true

[tool.bumpversion]
current_version = "0.2.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = '''^version\s*=\s*([\'\"\`])({current_version})\1'''
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/mfclib/__init__.py"

[tool.git-changelog]
convention = "angular"
in-place = false
output = "changelog.md"
provider = "github"
sections = "fix,feat,refactor,chore,style,build"
template = "angular"
